--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,9 @@ spring:
     hibernate:
       ddl-auto: update
     open-in-view: true
+  data:
+    rest:
+      base-path: /api
 
 mangaserver:
   database: database.sqlite
