--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     testImplementation 'org.springframework.security:spring-security-test'
 
     implementation 'com.google.guava:guava:31.1-jre'
+    implementation "com.github.ben-manes.caffeine:caffeine:3.1.2"
     implementation 'org.apache.commons:commons-compress:1.22'
     implementation 'org.xerial:sqlite-jdbc:3.40.0.0'
     implementation 'org.hibernate:hibernate-community-dialects:6.1.6.Final'
