--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.1",
+    "swr": "^2.0.3",
     "zustand": "^4.1.5"
   },
   "devDependencies": {
