--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.0.4'
+    id 'org.springframework.boot' version '3.1.0'
     id 'io.spring.dependency-management' version '1.1.0'
 }
 
@@ -19,6 +19,7 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-artemis'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-security'
@@ -29,14 +30,16 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 
-    implementation 'com.google.guava:guava:31.1-jre'
-    implementation "com.github.ben-manes.caffeine:caffeine:3.1.5"
-    implementation 'org.apache.commons:commons-compress:1.22'
-    implementation 'org.xerial:sqlite-jdbc:3.41.0.0'
-    implementation 'org.hibernate:hibernate-community-dialects:6.1.7.Final'
-    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
+    implementation 'com.google.guava:guava:32.0.1-jre'
+    implementation "com.github.ben-manes.caffeine:caffeine:3.1.6"
+    implementation 'org.apache.commons:commons-compress:1.23.0'
+    implementation 'org.xerial:sqlite-jdbc:3.42.0.0'
+    implementation 'org.hibernate.orm:hibernate-community-dialects:6.2.5.Final'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
+    implementation 'org.apache.activemq:artemis-jms-server:2.29.0'
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
-    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5', 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 }
 
 tasks.named('test', Test) {
