--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,18 +11,19 @@
   },
   "dependencies": {
     "antd": "^5.0.4",
-    "axios": "^1.2.1",
+    "axios": "^1.4.0",
+    "got": "^13.0.0",
+    "jotai": "^2.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.1",
-    "swr": "^2.0.3",
-    "zustand": "^4.1.5"
+    "swr": "^2.0.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
-    "@vitejs/plugin-react-swc": "^3.0.0",
+    "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.13",
     "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
