--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "antd": "^5.0.4",
     "axios": "^1.4.0",
-    "got": "^13.0.0",
     "jotai": "^2.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -22,13 +21,13 @@
   "devDependencies": {
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@vitejs/plugin-react": "^4.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@vitejs/plugin-react-swc": "^3.3.2",
     "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-standard-with-typescript": "^36.0.0",
     "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-n": "^16.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
