--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "lint": "tsc --noEmit && eslint --ext .js,.jsx,.ts,.tsx ."
   },
   "dependencies": {
+    "@ant-design/icons": "^5.1.4",
     "antd": "^5.0.4",
     "axios": "^1.4.0",
     "jotai": "^2.2.2",
@@ -25,7 +26,7 @@
     "@vitejs/plugin-react-swc": "^3.3.2",
     "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
-    "eslint-config-standard-with-typescript": "^36.0.0",
+    "eslint-config-standard-with-typescript": "^37.0.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^16.0.0",
     "eslint-plugin-prettier": "^5.0.0",
