--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.1.4'
+    id 'org.springframework.boot' version '3.1.5'
     id 'io.spring.dependency-management' version '1.1.3'
 }
 
@@ -32,17 +32,17 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
 
-    implementation 'com.google.guava:guava:32.1.2-jre'
-    implementation "com.github.ben-manes.caffeine:caffeine:3.1.8"
+    implementation 'com.google.guava:guava:32.1.3-jre'
+    implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'
     implementation 'org.apache.commons:commons-compress:1.24.0'
-    implementation 'org.xerial:sqlite-jdbc:3.43.0.0'
+    implementation 'org.xerial:sqlite-jdbc:3.44.0.0'
     implementation 'org.hibernate.orm:hibernate-community-dialects:6.3.1.Final'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
-    implementation 'io.jsonwebtoken:jjwt-api:0.12.2'
-    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.2'
-    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.2'
+    implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'
 }
 
-tasks.named('test', Test) {
+test {
     useJUnitPlatform()
 }
