--- a/compose.yaml
+++ b/compose.yaml
@@ -1,11 +1,21 @@
 services:
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "10033:10033"
+    depends_on:
+      - postgres
+      - redis
+
   postgres:
     image: postgres:alpine
+    ports:
+      - "5432:5432"
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-    ports:
-      - 5432:5432
     volumes:
       - ./docker-volumes/postgres/data:/var/lib/postgresql/data
 
@@ -13,6 +23,6 @@ services:
     image: redis:alpine
     command: redis-server --save 60 1 --loglevel warning
     ports:
-      - 6379:6379
+      - "6379:6379"
     volumes:
       - ./docker-volumes/redis/data:/data
