--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id('java')
-    id('org.springframework.boot').version('3.4.4')
+    id('org.springframework.boot').version('3.5.6')
     id('io.spring.dependency-management').version('1.1.7')
 }
 
@@ -9,7 +9,7 @@ version = '0.0.1-SNAPSHOT'
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(21)
+        languageVersion = JavaLanguageVersion.of(25)
     }
 }
 
@@ -23,7 +23,7 @@ repositories {
     mavenCentral()
 }
 
-def jjwtVersion = "0.12.6"
+def jjwtVersion = "0.13.0"
 
 dependencies {
     implementation('org.springframework.boot:spring-boot-starter-web')
@@ -36,12 +36,12 @@ dependencies {
     testImplementation('org.springframework.boot:spring-boot-starter-test')
     testImplementation('org.springframework.security:spring-security-test')
 
-    implementation('com.google.guava:guava:33.4.8-jre')
-    implementation('com.github.ben-manes.caffeine:caffeine:3.2.0')
-    implementation('org.apache.commons:commons-compress:1.27.1')
-    implementation('org.xerial:sqlite-jdbc:3.49.1.0')
-    implementation('org.hibernate.orm:hibernate-community-dialects:7.0.0.Beta5')
-    implementation('org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6')
+    implementation('com.google.guava:guava:33.5.0-jre')
+    implementation('com.github.ben-manes.caffeine:caffeine:3.2.2')
+    implementation('org.apache.commons:commons-compress:1.28.0')
+    implementation('org.xerial:sqlite-jdbc:3.50.3.0')
+    implementation('org.hibernate.orm:hibernate-community-dialects:6.6.29.Final')
+    implementation('org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.13')
     implementation("io.jsonwebtoken:jjwt-api:${jjwtVersion}")
     runtimeOnly("io.jsonwebtoken:jjwt-impl:${jjwtVersion}")
     runtimeOnly("io.jsonwebtoken:jjwt-jackson:${jjwtVersion}")
